Containerised all the body elements

--- a/proposal.html
+++ b/proposal.html
@@ -12,16 +12,17 @@
     </head>
 </head>
 <body>
-    <header>
+    <div id="container">
+        <header>
 
-    </header>
-    <!--from class-->
-    <section class="middleboxes"></section>
-    <section class="middleboxes"></section>
-    <footer>
-        <div class="footerbox"></div>
-        <div class="footerbox"></div>
-        <div class="footerbox"></div>
-    </footer>
+        </header>
+        <section class="middleboxes">Address of the following in this section:</section>
+        <section class="middleboxes">Address of the following in this section</section>
+        <footer>
+            <div class="footer_box"></div>
+            <div class="footer_box"></div>
+            <div class="footer_box"></div>
+        </footer>
+    </div><!--Closing Container-->
 </body>
 </html>
