--- a/proposal.html
+++ b/proposal.html
@@ -8,20 +8,55 @@
         </script>
         <style>
             /*css, presentation logic*/
+            #container{
+                display: flex;
+                flex-wrap: wrap;
+                width: 80%;
+                margin:auto;
+            }
+            header{
+                width: 100%;
+                height: 200px;
+                background-color: lightgray;
+            }
+            .middleboxes{
+                background-color: lightgray;
+                width: 400px;
+                height: 500px;
+                flex-grow: 1;
+                flex-shrink: 0;
+                flex-basis: 400px;
+                margin: 1%;
+            }
+            footer{
+                display: flex;
+                background-color: lightgray;
+                width: 100%;
+                height: 200px;
+                clear: both;
+            }
+            .footer_box{
+                display: flex;
+                flex: 1 0 20px;
+                background-color: gray;
+                width: 150px;
+                height: 150px;
+                margin: 1%;
+            }
         </style>
     </head>
 </head>
 <body>
     <div id="container">
         <header>
-
+            <p>Title</p>
         </header>
         <section class="middleboxes">Address of the following in this section:</section>
         <section class="middleboxes">Address of the following in this section</section>
         <footer>
-            <div class="footer_box"></div>
-            <div class="footer_box"></div>
-            <div class="footer_box"></div>
+            <div class="footer_box">List Resource Link</div>
+            <div class="footer_box">List Questions + Concerns</div>
+            <div class="footer_box">Accessibility Implementation</div>
         </footer>
     </div><!--Closing Container-->
 </body>
