--- a/proposal.html
+++ b/proposal.html
@@ -54,7 +54,7 @@
         <section class="middleboxes">Address of the following in this section:</section>
         <section class="middleboxes">Address of the following in this section</section>
         <footer>
-            <div class="footer_box">List Resource Link</div>
+            <div class="footer_box">List Resources Link</div>
             <div class="footer_box">List Questions + Concerns</div>
             <div class="footer_box">Accessibility Implementation</div>
         </footer>
