--- a/proposal.html
+++ b/proposal.html
@@ -1,50 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head>
-        <title></title>
-        <script>
-            //<!--javascript code-->
-        </script>
-        <style>
-            /*css, presentation logic*/
-            #container{
-                display: flex;
-                flex-wrap: wrap;
-                width: 80%;
-                margin:auto;
-            }
-            header{
-                width: 100%;
-                height: 200px;
-                background-color: lightgray;
-            }
-            .middleboxes{
-                background-color: lightgray;
-                width: 400px;
-                height: 500px;
-                flex-grow: 1;
-                flex-shrink: 0;
-                flex-basis: 400px;
-                margin: 1%;
-            }
-            footer{
-                display: flex;
-                background-color: lightgray;
-                width: 100%;
-                height: 200px;
-                clear: both;
-            }
-            .footer_box{
-                display: flex;
-                flex: 1 0 20px;
-                background-color: gray;
-                width: 150px;
-                height: 150px;
-                margin: 1%;
-            }
-        </style>
-    </head>
+    <title></title>
+    <link href="./css/style.css" rel="stylesheet">
+    <script>
+        //<!--javascript code-->
+    </script>
 </head>
 <body>
     <div id="container">
