--- a/proposal.html
+++ b/proposal.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <head>
-        <title></title>
-        <link rel="stylesheet" href="../css/style.css"/>
+        <title> </title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css"/>
         <script>
             //<!--javascript code-->
         </script>
@@ -12,14 +12,52 @@
 <body>
     <div id="container">
         <header>
-            <p>Title</p>
+            <style> p    {color: rgb(15, 13, 13);} 
+            p {font-size:30px;}
+            p {text-align:center;}
+            p {font-family:verdana;}
+            </style>
+           
+            <p>Transport Suggestion</p>
         </header>
-        <section class="middleboxes">Address of the following in this section:</section>
-        <section class="middleboxes">Address of the following in this section</section>
+        <section class="middleboxes">
+            <h1>Address of the following in this section:</h1>
+            <ul>
+                <li>  CTA Bus Tracker,Train Tracker and Weather API is being used  </li> <br> 
+            </br>
+                <li>The Data received from API's will help in forming a collective desicion to take a particualr route or not </li>
+                <br> </br>
+                <li> Data collected would be the Start location,drop location and starting time of the journey</li>
+                <br> </br>
+                <li> Identify all entities/tables you might use in your database along with their respective attributes
+                </li>
+                <br> </br>
+            </ul>
+            
+        </section>
+        <section class="middleboxes">
+            <h1>Address of the following in this section:</h1>
+                <ul>
+                <li> people travelling using the CTA will use this </li>
+                <br> </br>
+                <li> our focus is to help the user in making an informed desicion while planning to travel along a particular route</li>
+                <br> </br>
+                <li> why did you select this topic?</li>
+            </ul>
+        </section>
         <footer>
-            <div class="footer_box">List Resources Link</div>
-            <div class="footer_box">List Questions + Concerns</div>
-            <div class="footer_box">Accessibility Implementation</div>
+            <div class="footer_box">
+                <style>h1 {font-size:20px;} </style>
+                <h1>List Resources Link</h1>
+
+            </div>
+            <div class="footer_box">
+                <style>h1 {font-size:20px;} </style>
+                <h1>List Questions + Concerns</h1>
+            </div>
+            <div class="footer_box">
+                <style>h1 {font-size:20px;} </style>
+                <h1>Accessibility Implementation</h1></div>
         </footer>
     </div><!--Closing Container-->
 </body>
