--- a/proposal.html
+++ b/proposal.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <head>
-        <title> </title>
+        <title>CS484 Assignment 1: Final Project Proposal</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Final Project Project">
+        <meta name="authors" content="Asif Iqbal Gazi, Zainab Mohammad, Sai Nirmal Morampudi">
+        <meta name="keywords" content="CS484, Transport Safety, CTA Alert, Final Project">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/style.css"/>
         <script>
             //<!--javascript code-->
         </script>
-    </head>
 </head>
 <body>
     <div id="container">
