Some CSS adjustment

--- a/proposal.html
+++ b/proposal.html
@@ -41,26 +41,37 @@
         <section class="middleboxes">
             <h1>Address of the following in this section:</h1>
                 <ul>
-                <li> people travelling using the CTA will use this </li>
-                <br> </br>
-                <li> our focus is to help the user in making an informed desicion while planning to travel along a particular route</li>
-                <br> </br>
-                <li> why did you select this topic?</li>
-            </ul>
+                    <li> people travelling using the CTA will use this </li>
+                    <br> </br>
+                    <li> our focus is to help the user in making an informed desicion while planning to travel along a particular route</li>
+                    <br> </br>
+                    <li> why did you select this topic?</li>
+                </ul>
         </section>
         <footer>
             <div class="footer_box">
-                <style>h1 {font-size:20px;} </style>
-                <h1>List Resources Link</h1>
-
+                <h3>List of Resource Links:</h3>
+                <ul>
+                    <li> Link to API:</li>
+                    <br> </br>
+                    <li> Link to site(s) to model after:</li>
+                    <br> </br>
+                    <li> Resources:</li>
+                </ul>
             </div>
             <div class="footer_box">
-                <style>h1 {font-size:20px;} </style>
-                <h1>List Questions + Concerns</h1>
+                <h3>Questions + Concerns:</h3>
             </div>
             <div class="footer_box">
-                <style>h1 {font-size:20px;} </style>
-                <h1>Accessibility Implementation</h1></div>
+                <h3>Accessibility implementation:</h3>
+                    <ul>
+                        <li>Text to speech?</li><br>
+                        <li>Light/Dark mode?</li><br>
+                        <li>Font change button?<li><br>
+                        <li>On screen-keyboard?</li><br>
+                        <li>Screen Magnifer?</li><br>
+                    </ul>  
+            </div>
         </footer>
     </div><!--Closing Container-->
 </body>
