--- a/proposal.html
+++ b/proposal.html
@@ -39,7 +39,7 @@
             
         </section>
         <section class="middleboxes">
-            <h1>Address of the following in this section:</h1>
+            <h1>Address the following in this section:</h1>
                 <ul>
                     <li> people travelling using the CTA will use this </li>
                     <br> </br>
