Added Font slider, merged nirmal branch

--- a/proposal.html
+++ b/proposal.html
@@ -1,85 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>CS 484 Assignment 1: Final Project Proposal</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Final Project Project">
-    <meta name="authors" content="Asif Iqbal Gazi, Zainab Mohammad, Sai Nirmal Morampudi">
-    <meta name="keywords" content="CS484, Transport Safety, CTA Alert, Final Project">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/style.css"/>
-</head>
-<body>
-<div class="full-container">
-    <div class="container">
-        <div class="horizontal-row">
-            <div class="header">
-                <h2>Transport suggestor</h2><br>
-                <p>An application which gives an informed decision to take a particular route or not</p>
-            </div>
-        </div>
-        <div class="horizontal-row">
-            <div class="middle">
-                <div class="middle-box">
-                    <p>RESTFul API's used:</p><br>
-                    CTA Bus Tracker,Train Tracker and Weather API<br>
-                    <br>
-                    <b>How will this api give insight to users?</b><br>
-                    The Data received from API's will help in forming a collective desicion to take a particualr route or not<br>
-                    <br>
-                    <b>What are we collecting from the users?</b><br>
-                    Start location,drop location and starting time of the journey<br>
-                    <br>
-                    <b>Identify all entities/tables we might use:</b><br>
-                    require details like Start location,drop location and starting time of the journey<br>
-                </div>
-                <div class="middle-box">
-                    <b>Who will potentially use this site?</b><br>
-                    people travelling using the CTA will use this<br>
-                    <br>
-                   <div class="Site-Goals"> <p>Site Goals?</p></div>
-                   <p> 1)our focus is to help the user in making an informed desicion while planning to travel along a particular route</p><br>
-                   <p>2)"please enter another goal here"<br></p>
-                    <br>
-                    <b>Why did we select this topic?</b><br>
-                    "enter the answer here"
+    <head>
+        <title>CS 484 Assignment 1: Final Project Proposal</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Final Project Project">
+        <meta name="authors" content="Asif Iqbal Gazi, Zainab Mohammad, Sai Nirmal Morampudi">
+        <meta name="keywords" content="CS484, Transport Safety, CTA Alert, Final Project">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./css/style.css"/>
+    </head>
+    <body>
+    <div class="full-container", id="fc">
+        <div class="container">
+            <div class="horizontal-row">
+                <div class="header">
+                    <h2>Transport suggestor</h2><br>
+                    <p>An application which gives an informed decision to take a particular route or not</p>
                 </div>
             </div>
-        </div>
-        <div class="horizontal-row">
-            <div class="footer-vessel">
-                <div class="footer-object">
-                    <div class="footer-package">
-                        <b>List of Resource Links:</b><br><br>
-                        &nbsp;- Link to API:<br>
-                        <ul>
-                        <li><a href="https://openweathermap.org/api">Weather API</a><br></li>
-                        <li><a href="https://www.transitchicago.com/developers/traintracker/">Train Tracking API</a></li>
-                        <li><a href="https://www.transitchicago.com/developers/bustracker/">Bus Tracking API</a></li>
-                        <li><a href="https://openweathermap.org/api">Customer Alerts API</a></li<br>
-                    </ul>
+            <div class="horizontal-row">
+                <div class="middle">
+                    <div class="middle-box">
+                        <b>RESTFul API's used:</b><br>
+                        CTA Bus Tracker,Train Tracker and Weather API<br>
                         <br>
-                        &nbsp;- Link to site(s) to model after:<br>
-                        <ul><li><a href="https://www.expedia.com/">expedia.com</a></li><br></ul>
+                        <b>How will this api give insight to users?</b><br>
+                        The Data received from API's will help in forming a collective desicion to take a particualr route or not<br>
+                        <br>
+                        <b>What are we collecting from the users?</b><br>
+                        Start location,drop location and starting time of the journey<br>
+                        <br>
+                        <b>Identify all entities/tables we might use:</b><br>
+                        USER -> fname, lname, gender, email, password, start_location, drop_location and starting_time<br>
+                    </div>
+                    <div class="middle-box">
+                        <b>Who will potentially use this site?</b><br>
+                        People travelling using the CTA will find this useful<br>
+                        <br>
+                    <div class="Site-Goals"> <p>Site Goals?</p></div>
+                        <p>1. Our focus is to help the user in making an informed desicion while planning to travel along a particular route</p>
+                        <p>2. Based on gathered travel data (anonymised ofcourse) we want to add in more feature to help the users</p><br>
+                        <b>Why did we select this topic?</b><br>
+                        "We selected this project because many people including most of UIC students use CTA for daily commuting, this will help them make informed decision"<br>
+                    </div>
+                </div>
+            </div>
+            <div class="horizontal-row">
+                <div class="footer-vessel">
+                    <div class="footer-object">
+                        <div class="footer-package">
+                            <b>List of Resource Links:</b><br><br>
+                            &nbsp;- Link to API:<br>
+                            <ul>
+                            <li><a href="https://openweathermap.org/api">Weather API</a><br></li>
+                            <li><a href="https://www.transitchicago.com/developers/traintracker/">Train Tracking API</a></li>
+                            <li><a href="https://www.transitchicago.com/developers/bustracker/">Bus Tracking API</a></li>
+                            <li><a href="https://openweathermap.org/api">Customer Alerts API</a><br></li>
+                        </ul>
+                            <br>
+                            &nbsp;- Link to site(s) to model after:<br>
+                            <ul><li><a href="https://www.expedia.com/">expedia.com</a><br></li></ul>
 
-                        &nbsp;- Resources:<br>
-                        &nbsp;&nbsp;&nbsp;Enter Resources<br>
-                        &nbsp;&nbsp;&nbsp;Enter Resources
-                    </div>
-                    <div class="footer-package">
-                        <b>Questions and Concerns:</b>
-                    </div>
-                    <div class="footer-package">
-                        <b>Accessibility implementation:</b><br>
-                        <br>
-                         &nbsp;- Light/Dark mode?<br>
-                        &nbsp;- On screen-keyboard?<br>
-                        
+                            &nbsp;- Resources:<br>
+                            &nbsp;&nbsp;&nbsp;nodejs.dev<br>
+                            &nbsp;&nbsp;&nbsp;w3schools.com
+                        </div>
+                        <div class="footer-package">
+                            <b>Questions and Concerns:</b>
+                        </div>
+                        <div class="footer-package">
+                            <b>Accessibility implementation:</b><br>
+                            <br>
+                            <div class="slidecontainer">
+                                <label>Change the font size:</label>
+                                <input type="range" min="10" max="30" value="50" class="slider" id="myRange">
+                                <p>Current Size: <span id="font_size"></span></p>
+                            </div>                            
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-</body>
+    </body>
+    <script src="./js/fontScript.js"></script>
 </html>
