--- a/proposal.html
+++ b/proposal.html
@@ -39,7 +39,7 @@
             
         </section>
         <section class="middleboxes">
-            <h1>Address of the following in this section:</h1>
+            <h3>User Information:</h3>
                 <ul>
                     <li> people travelling using the CTA will use this </li>
                     <br> </br>
@@ -65,11 +65,8 @@
             <div class="footer_box">
                 <h3>Accessibility implementation:</h3>
                     <ul>
-                        <li>Text to speech?</li><br>
-                        <li>Light/Dark mode?</li><br>
-                        <li>Font change button?<li><br>
-                        <li>On screen-keyboard?</li><br>
-                        <li>Screen Magnifer?</li><br>
+                        <li>Text size</li><br>
+                        <li>Light/Dark mode</li><br>
                     </ul>  
             </div>
         </footer>
