--- a/proposal.html
+++ b/proposal.html
@@ -12,8 +12,7 @@
     <body>
         <div class="container" id="fc">
             <div class="item header">
-                <h2>Transport Suggestion</h2><br>
-                <p>An application which gives an informed decision to take a particular route or not</p>
+                <h1>Transport Suggestion</h1>
             </div>
             <div class="item mid">
                 <div class="m1 middleboxes">
@@ -21,10 +20,10 @@
                     CTA Bus Tracker,Train Tracker and Weather API<br>
                     <br>
                     <b>How will this api give insight to users?</b><br>
-                    The Data received from API's will help in forming a collective desicion to take a particualr route or not<br>
+                    The data received from API's will help in forming a collective desicion to take a particualr route or not by providing information on delays, extreme weather, and crime warnings.<br>
                     <br>
                     <b>What are we collecting from the users?</b><br>
-                    Start location,drop location and starting time of the journey<br>
+                    Start location,drop location and starting time of the journey.<br>
                     <br>
                     <b>Identify all entities/tables we might use:</b><br>
                     USER -> fname, lname, gender, email, password, start_location, drop_location and starting_time<br>
@@ -32,14 +31,17 @@
                 </div>
                 <div class="m2 middleboxes">
                     <b>Who will potentially use this site?</b><br>
-                    People travelling using the CTA will find this useful<br>
+                    People travelling using the CTA will use this site.<br>
+                    
                     <br>
                     <b>Site Goals?</b><br>
-                    1. Our focus is to help the users in making an informed desicion while planning to travel along a particular route<br>
-                    2. Based on gathered travel data (anonymised ofcourse) we want to add in more feature to help the users<br>
+                    1. Our focus is to help the users in making an informed desicion while planning to travel along a particular route.<br>
+                    2. They need information that reflects realtime situations that may have an effect on their personal safety.<br>
+                    3. Based on gathered travel data (anonymised ofcourse) we want to add in more feature to help the users.<br>
                     <br>
                     <b>Why did we select this topic?</b><br>
-                    We selected this project because many people including most of UIC students use CTA for daily commuting, this will help them make informed decision<br>
+                    We selected this project because many people including many UIC students use CTA for daily commuting.<br>
+                    There is no one-stop shop that combines all the data necessary when making a transportation choice. Bus and train times on map applications are usually inaccurate. For crime information, users specifically have to search up news their area. Combining these three types of data will help users make better travel choices.<br>
                 </div>
             </div>
             <div class="item footer">
@@ -61,7 +63,9 @@
                 </div>
                 <div class="f2 footerboxes">
                     <b>Questions and Concerns:</b><br><br>
-                    &nbsp;- Can we monetize the application?
+                    &nbsp;- Can we monetize the application?<br>
+                    <br>
+                    &nbsp;- We are thinking of making a mobile application for this as well. Can we choose a framework that would allow us to share same code base?
                 </div>
                 <div class="f3 footerboxes">
                     <b>Accessibility implementation:</b><br>
